--- a/recipes/beav/meta.yaml
+++ b/recipes/beav/meta.yaml
@@ -18,7 +18,14 @@ requirements:
     - python
   run: 
     - bakta
+    - integron_finder
+    - macsyfinder
+    - fastani
+    - antismash
     - hmmer
+    - emboss
+    - blast-legacy
+    - bbmap
 test:
   commands:
     - beav
